# mes

./: .gitignore  README.md  gp_plots.ipynb  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pre-commit.yaml  pytest.yaml
MES_VI/: animate.py  gp.py  plot_MV_entropy.py
boplay/: benchmark_data.py  bo_algorithm.py  gp.py  kde.py  kernels.py  plot_MV_entropy.py
boplay/acq_funs/: __init__.py  ei.py  gamma_distribution.py  mes_utils.py  random.py  ves_1d_regression.py  ves_1d_regression_base.py  ves_1d_regression_lr.py  ves_1d_regression_lr_het.py  ves_base.py  ves_gamma.py  ves_mc_expo.py  ves_mc_gamma.py  ves_ramp.py
boplay/acq_funs/regression_models/: __init__.py  gamma_het_base.py  gamma_models.py  lr.py  lr_het.py  lr_het_base.py  lr_models.py  utils.py
boplay/plotting/: animate.py  plot_MV_entropy.py  plot_gp_1d.py
data/: benchmark_df.json
nbs/: contors.py  play.py
paper_experiments/: README.md  make_datasets.py  plot_results.ipynb  run_benchmark_exp.py
paper_plots/: analyze.ipynb  gp_plots.ipynb  lhg_yn1_vs_ymax.ipynb  y_max.npy  y_n1.npy  yn1_vs_ymax.ipynb  yn1_vs_ymax_heatmap.ipynb
scripts/: analyze.ipynb  kde_playing.py  main.py  make_1d_benchmark_funs.py  make_1d_bo_animation.py  make_1d_plot.py  make_animation.py  make_datsets.py  plot_hyperparameter_sweep.py  run_benchmark.py
scripts/paper_experiments/: README.md  plot_results.ipynb  run_benchmarks.py
scripts/paper_plots/: gp_plots.ipynb  yn1_vs_ymax.ipynb  yn1_vs_ymax_heatmap.ipynb
src/boplay/: benchmark_data.py  bo_algorithm.py  gp.py  kde.py  kernels.py
src/boplay/acq_funs/: __init__.py  ei.py  gamma_distribution.py  mes_utils.py  pi.py  pytorch_settings.py  random.py  ves_1d_regression.py  ves_1d_regression_base.py  ves_base.py  ves_gamma.py  ves_mc_expo.py  ves_mc_gamma.py  ves_mc_gaussian.py  ves_ramp.py
src/boplay/acq_funs/regression_models/: __init__.py  adam_optimizer.py  gamma_het_base.py  gamma_models.py  lr_het_base.py  lr_models.py  lr_sklearn.py
src/boplay/plotting/: animate.py  plot_MV_entropy.py  plot_gp_1d.py
tests/: test_acq_funs.py  test_benchmark_data.py  test_bo.py  test_regression_models.py  test_sample_y_max.py
visualize/: generate_figures.ipynb  gp_plots.ipynb
